@@ -1,3 +1,11 @@
+2014-09-02  Ramon Casero  <rcasero@gmail.com>
+
+	* matlab/ItkToolbox/transformix.m: (0.2.0)
+
+	- Now colour input figures are transformed and output in colour
+	too, but transforming each channel, instead of converting to
+	grayscale.
+
 2014-09-01  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/CardiacToolbox/histology_blockface_preprocessing.m: (0.2.0)
